Fix: Display total users count on dashboard

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -42,7 +42,7 @@
         <div class="card card-dashboard bg-info text-white">
             <div class="card-body">
                 <h5 class="card-title">Usuarios</h5>
-                <h2 class="display-4">--</h2>
+                <h2 class="display-4">{{ total_users }}</h2>
                 <i class="fas fa-users fa-2x opacity-50 position-absolute end-0 top-0 m-3"></i>
             </div>
         </div>
