--- a/templates/sales/report.html
+++ b/templates/sales/report.html
@@ -17,10 +17,18 @@
                     <label for="end_date" class="form-label">Fecha Fin</label>
                     <input type="date" class="form-control" id="end_date" name="end_date" value="{{ end_date }}">
                 </div>
-                <div class="col-md-4">
-                    <button type="submit" class="btn btn-primary w-100">
-                        <i class="fas fa-search me-2"></i>Generar Reporte
+                <div class="col-md-4 d-flex gap-2">
+                    <button type="submit" class="btn btn-primary flex-grow-1">
+                        <i class="fas fa-search me-2"></i>Generar
                     </button>
+                    <a href="{% url 'sales:export_sales_excel' %}?{{ request.GET.urlencode }}" class="btn btn-success"
+                        title="Exportar Excel">
+                        <i class="fas fa-file-excel"></i>
+                    </a>
+                    <a href="{% url 'sales:export_sales_pdf' %}?{{ request.GET.urlencode }}" class="btn btn-danger"
+                        title="Exportar PDF">
+                        <i class="fas fa-file-pdf"></i>
+                    </a>
                 </div>
             </form>
         </div>
